--- a/sem1/Activity 4.1.html
+++ b/sem1/Activity 4.1.html
@@ -90,12 +90,12 @@
     <td><a href="https://animexin.vip/perfect-world-episode-1-subtitle/">List.3</a></td>
   </tr>
   <tr>
-    <td><center><img src="https://i.ytimg.com/vi/nwdpZ6Xkm1U/oar2.jpg?sqp=-oaymwEYCJUDENAFSFqQAgHyq4qpAwcIARUAAIhC&rs=AOn4CLACd2Hwpa2y7bCRCgpN7mQZDB05CQ" alt="slay gods poster" width="100"></center></td>
+    <td><center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5qMaKrfq68fbQ11P7S7VYBsZj73JGeViI1OLUxadKuiPofI5E-ByrOeGi4baHFatjfug&usqp=CAU" alt="slay gods poster" width="100"></center></td>
     <td>Slay Gods</td>
     <td><a href="https://animexin.vip/slay-the-gods-episode-1-indonesia-english-sub/">List.4</a></td>
   </tr>
   <tr>
-    <td><center><img src="https://m.media-amazon.com/images/M/MV5BOTY5OTcwNzMtM2M1ZC00M2UyLWFlOWUtNGVjYmI0MzBmY2MyXkEyXkFqcGdeQXVyNjMxMTE5NTY@._V1_.jpg" alt="Apotheosis poster" width="100"></center></td>
+    <td><center><img src="https://lh3.googleusercontent.com/pw/ADCreHdFwZKzetU_0OpYCKIAD6I7KGfIit-ncZSw1H2WKQujqDL1UEwwJ_pxndgw7uJkYvmCfC_qiTLZXury-cijylHiQep7_n5EpTp8LPfpclOCz1o7p4nb_eI0F4DMvk7Nu7KT3XOH1IzwVARNjZzYa9uA=rw" alt="apotheosis poster" width="100"></center></td>
     <td>Apotheosis</td>
     <td><a href="https://animexin.vip/apotheosis-episode-1-subtitle/">List.5</a></td>
   </tr>
