--- a/sem1/Activity 4.1.html
+++ b/sem1/Activity 4.1.html
@@ -105,12 +105,12 @@
     <td><a href="https://animexin.vip/martial-master-episode-1-subbed/">List.6</a></td>
   </tr>
   <tr>
-    <td><center><img src="https://m.media-amazon.com/images/M/MV5BZDYyN2NlMTItOTY5Zi00NDNiLWI5ZWMtNmVjMzQ1N2I0Mjk1XkEyXkFqcGdeQXVyNjMxMTE5NTY@._V1_.jpg" alt="shrouding the heavens poster" width="100"></center></td>
+    <td><center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSE13O_JDr-P3WRQGq7UftC3o6Nnsq0D8wB5g&s" alt="shrouding the heavens poster" width="100"></center></td>
     <td>Shrouding The Heavens</td>
     <td><a href="https://animexin.vip/shrounding-the-heavens-episode-1-subtitle-indonesia-english/">List.7</a></td>
   </tr>
   <tr>
-    <td><center><img src="https://i.pinimg.com/originals/c3/9b/9c/c39b9c60d84a6bf6ae4322e2c854c718.jpg" alt="renegade immortal poster" width="100"></center></td>
+    <td><center><img src="" alt="renegade immortal poster" width="100"></center></td>
     <td>Renegade Immortal</td>
     <td><a href="https://animexin.vip/shrounding-the-heavens-episode-1-subtitle-indonesia-english/">List.8</a></td>
   </tr>
